testsuite/tests/grammar/invalid_lexers/token_name.lkt
import common

lexer foo_lexer {
    example <- "example"
    example <- "null"
}
